# hobby-engine

./: .clang-format  .gitignore  .gitmodules  API.md  CMakeLists.txt  CONTRIBUTING.md  README.md  compile_flags.txt  compile_libs.sh  embed_script.py  embed_scripts.sh  format.sh  install_libs.sh  libs  main.lua  makefile  meson.build  text_to_header.py
docs/: README.md  auxiliary.md  events.md  input.md  math.md  rendering.md  things.md  time.md  window.md
engine/: CMakeLists.txt  compile_flags.txt  doxygen.conf
engine/include/: app.hh  color.hh  draw.hh  event.hh  graphics.hh  hobby.hh  input.hh  input_types.hh  point.h  point.hh  quad.hh  shader.hh  texture.hh  time.hh  transform.hh  types.hh  vec2.h  vec2.hh  window.h  window.hh
engine/include/event/: key.hh  mouse.hh
engine/src/: app.cc  builtin_shaders.cc  builtin_shaders.hh  draw.cc  event_impl.cc  graphics.cc  input.cc  quad.cc  shader.cc  shader.frag  shader.vert  texture.cc  time.cc  vec2.cc  window.cc
lua/: CMakeLists.txt  compile_flags.txt
lua/src/: main.cc  wrap.hh  wrap_app.cc  wrap_app.hh  wrap_draw.cc  wrap_draw.hh  wrap_graphics.cc  wrap_input.cc  wrap_input.hh  wrap_texture.cc  wrap_texture.hh  wrap_time.cc  wrap_time.hh  wrap_window.cc  wrap_window.hh
res/: color.frag  color.vert  texture.frag  texture.vert
src/: color.h  color.hh  common.hh  dynarr.hh  engine.c  engine.cc  engine.h  engine.hh  hbmath.h  input.hh  key.hh  log.c  log.cc  log.h  log.hh  log_debug.d  main.c  main.cc  main_debug.d  mat4.cc  mat4.hh  mesh.cc  mesh.hh  renderer.c  renderer.cc  renderer.h  renderer.hh  shader.c  shader.cc  shader.h  shader.hh  shader_debug.d  texture.c  texture.cc  texture.h  texture.hh  time.c  time.cc  time.h  time.hh  (+11 more)
src/glfw/: glfw_input.cc  glfw_input.hh  glfw_window.cc  glfw_window.hh
src/lua/: aux.lua  auxiliary.hh  auxiliary.lua  class.hh  class.lua  event.hh  event.lua  input.hh  input.lua  math.hh  math.lua  run.hh  run.lua  set.hh  set.lua  shader.hh  thing.hh  thing.lua
src/lua_wrap/: lua_wrap_renderer.c  lua_wrap_texture.c  lua_wrap_time.c  lua_wrapper.c  lua_wrapper.h  luaheaders.h
src/lua_wrapper/: wrap_engine.cc  wrap_input.cc  wrap_log.cc  wrap_renderer.cc  wrap_texture.cc  wrap_window.cc  wrapper.cc  wrapper.hh
src/opengl/: gl_input.cc  gl_input.hh  gl_renderer.cc  gl_renderer.hh  gl_shader.cc  gl_shader.hh  gl_texture.cc  gl_texture.hh  gl_window.cc  gl_window.hh  vertex.cc  vertex.hh
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
